--- a/Salestack/Salestack.csproj
+++ b/Salestack/Salestack.csproj
@@ -6,11 +6,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>eaba9e5f-23ab-403d-9f6c-40a0c1646807</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\Users\Director\" />
+    <Folder Include="Controllers\Users\Manager\" />
+    <Folder Include="Controllers\Users\Seller\" />
   </ItemGroup>
 
 </Project>
