--- a/Salestack/appsettings.json
+++ b/Salestack/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SalestackDbConnectionString": "Host=database:5432;userid=jradmin;password=12345678;Database=SalestackDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
