:wrench: Changing watch mode to rebuild application.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,5 +21,4 @@ services:
     develop:
         watch:
           - path: ./
-            action: sync+restart
-            target: ./app
+            action: rebuild
