--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "dockerfile"
-dockerfilePath = "Dockerfile.prod"
+dockerfilePath = "Salestack/Dockerfile.prod"
 
 [deploy]
 startCommand = "dotnet Salestack.dll"
