--- a/Salestack/Dockerfile.prod
+++ b/Salestack/Dockerfile.prod
@@ -1,9 +1,9 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
 WORKDIR /app
-EXPOSE 5000
-EXPOSE 5001
+EXPOSE 7000
 
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Salestack/Salestack.csproj", "Salestack/"]
@@ -12,7 +12,9 @@ COPY . .
 WORKDIR "/src/Salestack"
 RUN dotnet build "./Salestack.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-RUN dotnet publish "./Salestack.csproj" -c $BUILD_CONFIGURATION -o /app/publish
+FROM build AS publish
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./Salestack.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
